--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Task List app built on the MEAN stack.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "test-unit": "NODE_ENV=test mocha '/**/*.spec.js'"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,12 @@
   "homepage": "https://github.com/marudine/MEAN-task-list#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mongojs": "^2.4.1"
+    "mocha": "^4.0.1",
+    "mongojs": "^2.4.1",
+    "request": "^2.83.0",
+    "sinon": "^4.0.1"
   }
 }
