--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "mongojs": "^2.4.1",
     "request": "^2.83.0",
     "sinon": "^4.0.1"
+  },
+  "devDependencies": {
+    "supertest": "^3.0.0"
   }
 }
