Add integration test for interaction between server, router and static fileby testing for index.html title.
Changed views folder to public folder.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Task List app built on the MEAN stack.",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --reporter nyan",
     "test-unit": "NODE_ENV=test mocha '/**/*.spec.js'"
   },
   "repository": {
