--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Task List app built on the MEAN stack.",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --reporter nyan --watch",
+    "test": "mocha -R nyan -w --inline-diffs",
     "test-unit": "NODE_ENV=test mocha '/**/*.spec.js'"
   },
   "repository": {
