--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   },
   "homepage": "https://github.com/marudine/MEAN-task-list#readme",
   "dependencies": {
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
     "mongojs": "^2.4.1",
+    "mongoose": "^4.12.3",
     "request": "^2.83.0",
-    "sinon": "^4.0.1"
+    "sinon": "^4.0.1",
+    "supertest": "^3.0.0"
   },
-  "devDependencies": {
-    "supertest": "^3.0.0",
-    "babel-register": "^6.26.0"
-  }
+  "devDependencies": {}
 }
