--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
