--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express": "^4.16.2",
     "mocha": "^4.0.1",
     "mongojs": "^2.4.1",
-    "mongoose": "^4.12.3",
+    "mongoose": "^4.10.8",
+    "mpromise": "^0.5.5",
     "request": "^2.83.0",
     "sinon": "^4.0.1",
     "supertest": "^3.0.0"
