--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mpromise": "^0.5.5",
     "request": "^2.83.0",
     "sinon": "^4.0.1",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "node-mocks-http": "^1.6.6"
   },
   "devDependencies": {}
 }
